# quaid-sim-cpp

./: .gitignore  CMakeLists.txt  Important Commands.txt  LICENSE  README.md
assets/: fuselage.stl  left_calf.stl  left_knee_horn.stl  left_knee_link.stl  left_knee_servo.stl  left_servo_mount.stl  left_thigh.stl  left_thigh_horn.stl  left_thigh_link.stl  left_thigh_servo.stl  pelvis.stl  quaid.xml  right_calf.stl  right_knee_horn.stl  right_knee_link.stl  right_knee_servo.stl  right_servo_mount.stl  right_thigh.stl  right_thigh_horn.stl  right_thigh_link.stl  right_thigh_servo.stl
assets/scene/: incline_uneven.stl  scene_incline.stl
assets/v2/: bottom_link.stl  fuselage.stl  left_calf.stl  left_knee_horn.stl  left_knee_link.stl  left_knee_servo.stl  left_servo_mount.stl  left_thigh.stl  left_thigh_horn.stl  left_thigh_link.stl  left_thigh_servo.stl  quaid_flat.xml  quaid_ramp.xml  quaid_standalone_v4.xml  quaid_v2.xml  right_calf.stl  right_knee_horn.stl  right_knee_link.stl  right_knee_servo.stl  right_servo_mount.stl  right_thigh.stl  right_thigh_horn.stl  right_thigh_link.stl  right_thigh_servo.stl  testy_scene.xml  top_link.stl
config/: settings.yaml
include/: mqtt_controller.h  quaid_controller.h  servo_shield.h  settings.h  utils.h
src/: headless.cpp  main.cpp  mqtt_controller.cpp  quaid_controller.cpp  servo_shield.cpp  settings.cpp  utils.cpp
